# CZ_SYSTEM

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp
background/: CMakeLists.txt
background/test/: CMakeLists.txt
base/include/: ClientUdp.h  Common.h  ServerUdp.h
base/src/: ClientInfo.cpp  ClientUdp.cpp  ServerUdp.cpp
include/: ClientInfo.h  ClientUdp.h  Common.h  MainControlBoard.h  ServerUdp.h  StatusBoard.h
qtUi/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  dialog1.cpp  dialog1.h  resource_dialog1.h  resource_mainwindow.h
src/: ClientInfo.cpp  ClientUdp.cpp  Common.cpp  MainControlBoard.cpp  RingBuffer.cpp  ServerUdp.cpp  StatusBoard.cpp
test/: CMakeLists.txt  test_client_info.cpp  test_client_mcb.cpp  test_server_info.cpp  test_server_mcb.cpp
